[package]
name = "ascii-diagrams"
version = "0.1.0"
authors = ["Daniele D'Orazio <d.dorazio96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
